--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<img src='mypic.jpg'>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  .fit { /* set relative picture size */
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .center {
+    display: block;
+    margin: auto;
+  }
+</style>
+</head>
+<body>
+
+<img class="center fit" src="mypic.jpg" >    
+
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" language="JavaScript">
+  function set_body_height() { // set body height = window height
+    var wh = $(window).height();
+    $('body').height(wh);
+  }
+  $(document).ready(function() {
+    set_body_height();
+    $(window).bind('resize', function() { set_body_height(); });
+  });
+</script>
+
+</body>
+</html>
